# RaccoonLM

./: .env.example  .gitignore  HOW-TO.md  ISSUES.md  LICENSE  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
api/: chat.py  core.py  hub.py  models.py  routes.py  system.py
config/: __init__.py
configuration/: __init__.py  config.py
core/: cache.py  conversations.py  hub.py  llm.py  models.py  network.py  openai_endpoint.py  schemas.py  streaming.py
plugins/: __init__.py  base.py  internet.py
static/: index.html
static/css/: raccoonlm.css
static/js/: raccoonlm.js
tests/: test_llamacpp_loading_streaming.py  test_lmstudio_loading_streaming.py
