[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "raccoonlm"
version = "2.0.0"
description = "Local AI Model Manager — Ollama wrapper"
requires-python = ">=3.11"

[project.scripts]
raccoonlm = "raccoonlm.main:main"

[tool.setuptools.packages.find]
include = ["raccoonlm*"]
