[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "raccoonlm"
version = "2.0.0"
description = "Standalone local AI model manager — direct llama.cpp GGUF"
requires-python = ">=3.11"

[project.scripts]
raccoonlm = "raccoonlm.main:main"

[tool.setuptools.packages.find]
include = ["raccoonlm*"]
